--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,6 @@
-.title{
-    color:red;
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+$main-font: 'Roboto', sans-serif;
+
+body {
+    font-family: $main-font;
 }
